@@ -1,6 +1,6 @@
 Package: spgrass6
-Version: 0.6-13
-Date: 2009-12-07
+Version: 0.6-14
+Date: 2010-01-15
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
@@ -9,7 +9,7 @@ Description: Interpreted interface between GRASS 6 geographical
     environment, or running free-standing R in a temporary GRASS location;
     the package provides facilities for using all GRASS commands from the 
     R command line.
-Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.5.26), XML
+Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.6-7), XML
 SystemRequirements: GRASS (>= 6.3)
 License: GPL (>= 2)
 URL: http://grass.osgeo.org/
