@@ -1,3 +1,15 @@
+2010-01-15 16:51  rsbivand
+
+	* DESCRIPTION, R/vect_link.R: rgdal version checking
+
+2009-12-07 18:14  rsbivand
+
+	* DESCRIPTION, R/initGRASS.R, man/initGRASS.Rd: trying QGIS
+
+2009-11-08 08:58  rsbivand
+
+	* ChangeLog, inst/ChangeLog: tidy
+
 2009-11-08 08:04  rsbivand
 
 	* DESCRIPTION, R/bin_link.R, R/vect_link.R, R/xml1.R,
